Overflow Fixes

--- a/style.css
+++ b/style.css
@@ -12,10 +12,12 @@
 body {
     background-color: var(--light-gray);
     font-family: outfit, sans-serif;
+    overflow: hidden;
 }
 .qr-txt {
     background-color: var(--white);
     max-width: 350px;
+    height: 520px;
     border-radius: 25px;
     padding: 20px;
     margin: 10vh auto;
